--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         npm install @latest -g&nbsp;
         <code class="font-bold">The Beginning Is Near! </code>
     </p>
-    <button onclick="location.reload();">Refresh</button>
+    <button onclick="location.reload();">reFresh</button>
     <script>
         var canvas = document.querySelector('canvas'),
             ctx = canvas.getContext('2d');
