--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         npm install @latest -g&nbsp;
         <code class="font-bold">The Beginning Is Near! </code>
     </p>
-    <button onclick="location.reload();">reFresh</button>
+    <button onclick="refreshAnimation();">reFresh</button>
     <button onclick="reverseAnimation();">reVerse</button>
     <script>
         var canvas = document.querySelector('canvas'),
@@ -102,6 +102,16 @@
             if (iterations >= canvas.height / boxSize) {
                 clearInterval(intervalId);
             }
+        }
+        
+        function refreshAnimation() {
+            clearInterval(intervalId);
+            iterations = 0;
+            drops = [];
+            for (var i = 0; i < columns; i++) {
+                drops[i] = Math.floor(canvas.height / boxSize);
+            }
+            intervalId = setInterval(draw, 75);
         }
         
         function reverseAnimation() {
