--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <code class="font-bold">The Beginning Is Near! </code>
     </p>
     <button onclick="toggleReverse();" style="position: absolute; top: 80%; left: calc(50% - 85px);">reVerse</button>
-    <button onclick="refreshAnimation();" style="position: absolute; top: 80%; left: calc(50% + 5px);">reFresh</button>
+    <button onclick="refreshAnimation();" style="position: absolute; top: 80%; left: calc(50% + 5px + 150px);">reFresh</button>
     <script>
         var canvas = document.querySelector('canvas'),
             ctx = canvas.getContext('2d');
