--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         * { margin: 0; padding: 0; }
         body { background: #000; }
         canvas { display: block; position: absolute; top: 0; left: 0; }
-        p { position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%); }
+        p { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
+        .near { position: absolute; top: 80%; left: 50%; transform: translateX(-50%); }
         
         @font-face {
             font-family: "Minecraftia";
             src: url("public/Minecraftia-Regular.ttf") format("truetype");
         }
 
-        p {
+        p, .near {
             font-family: "Minecraftia", sans-serif;
             color: white;
             font-size: 24px;
@@ -46,10 +47,12 @@
     <canvas></canvas>
     <button onclick="toggleReverse();" style="position: absolute; top: 80%; left: calc(50% - 85px);">reVerse</button>
     <button onclick="refreshAnimation();" style="position: absolute; top: 80%; left: calc(50% + 5px + 75px);">reFresh</button>
-    <p>
-        npm install @latest -g&nbsp;
-        <code class="font-bold">The Beginning Is Near! </code>
-    </p>
+    <div class="near">
+        <p>
+            npm install @latest -g&nbsp;
+            <code class="font-bold">The Beginning Is Near! </code>
+        </p>
+    </div>
     <script>
         var canvas = document.querySelector('canvas'),
             ctx = canvas.getContext('2d');
