--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         * { margin: 0; padding: 0; }
         body { background: #000; }
         canvas { display: block; position: absolute; top: 0; left: 0; }
-        p { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
-        .near { position: absolute; top: 80%; left: 50%; transform: translateX(-50%); }
+        p { position: absolute; top: 30px; left: 50%; transform: translate(-50%, -50%); }
+        .near { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); }
         
         @font-face {
             font-family: "Minecraftia";
@@ -45,14 +45,15 @@
 </head>
 <body>
     <canvas></canvas>
-    <button onclick="toggleReverse();" style="position: absolute; top: 80%; left: calc(50% - 85px);">reVerse</button>
-    <button onclick="refreshAnimation();" style="position: absolute; top: 80%; left: calc(50% + 5px + 75px);">reFresh</button>
     <div class="near">
         <p>
             npm install @latest -g&nbsp;
             <code class="font-bold">The Beginning Is Near! </code>
         </p>
     </div>
+    <button onclick="toggleReverse();" style="position: absolute; top: 70px; left: calc(50% - 85px);">reVerse</button>
+    <button onclick="refreshAnimation();" style="position: absolute; top: 70px; left: calc(50% + 5px + 75px);">reFresh</button>
+    
     <script>
         var canvas = document.querySelector('canvas'),
             ctx = canvas.getContext('2d');
