--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         * { margin: 0; padding: 0; }
         body { background: #000; }
         canvas { display: block; position: absolute; top: 0; left: 0; }
-        p { position: absolute; top: 30px; left: 50%; transform: translate(-50%, -50%); }
-        .near { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); }
+        p, .near { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
         
         @font-face {
             font-family: "Minecraftia";
@@ -35,6 +34,9 @@
             font-size: 16px;
             cursor: pointer;
             margin: 5px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
         }
 
         button:hover {
@@ -51,8 +53,8 @@
             <code class="font-bold">The Beginning Is Near! </code>
         </p>
     </div>
-    <button onclick="toggleReverse();" style="position: absolute; top: 70px; left: calc(50% - 85px);">reVerse</button>
-    <button onclick="refreshAnimation();" style="position: absolute; top: 70px; left: calc(50% + 5px + 75px);">reFresh</button>
+    <button onclick="toggleReverse();" style="left: calc(50% - 85px);">reVerse</button>
+    <button onclick="refreshAnimation();" style="left: calc(50% + 5px + 75px);">reFresh</button>
     
     <script>
         var canvas = document.querySelector('canvas'),
