--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             font-family: "Minecraftia", sans-serif;
             color: white;
             font-size: 24px;
+            text-align: center;
         }
 
         .font-bold {
@@ -49,7 +50,7 @@
     <canvas></canvas>
     <div class="near">
         <p>
-            npm install @latest -g&nbsp;
+            npm install @latest<br>
             <code class="font-bold">The Beginning Is Near! </code>
         </p>
     </div>
