--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             font-weight: bold;
         }
 
+        .buttons-container {
+            position: absolute;
+            top: calc(50% + 70px);
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+        }
+
         button {
             font-family: "Minecraftia", sans-serif;
             background-color: #1DA1F2;
@@ -50,8 +58,10 @@
             <code class="font-bold">The Beginning Is Near!</code>
         </p>
     </div>
-    <button onclick="toggleReverse();">reVerse</button>
-    <button onclick="refreshAnimation();">reFresh</button>
+    <div class="buttons-container">
+        <button onclick="toggleReverse();">reVerse</button>
+        <button onclick="refreshAnimation();">reFresh</button>
+    </div>
     
     <script>
         var canvas = document.querySelector('canvas'),
