--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         * { margin: 0; padding: 0; }
         body { background: #000; }
         canvas { display: block; position: absolute; top: 0; left: 0; }
-        .container { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; }
+        .container { 
+            position: absolute; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%); 
+            text-align: center; 
+            margin: 20px; /* Add buffer */
+            width: calc(100% - 40px); /* Full screen minus buffer */
+        }
         
         @font-face {
             font-family: "Minecraftia";
