--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Animation</title>
     <style>
-        * { margin: 0; padding: 0; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body { background: #000; }
-        canvas { display: block; position: absolute; top: 0; left: 0; }
+        canvas { 
+            display: block; 
+            position: absolute; 
+            top: 0; 
+            left: 0; 
+            width: 100%; 
+            height: 100%;
+        }
         .container { 
             position: absolute; 
             top: 50%; 
             left: 50%; 
             transform: translate(-50%, -50%); 
             text-align: center; 
-            margin: 20px; /* Add buffer */
-            width: calc(100% - 40px); /* Full screen minus buffer */
+            margin: 20px auto; /* Add buffer */
+            max-width: calc(100% - 40px); /* Full screen width minus buffer */
         }
         
         @font-face {
@@ -35,9 +42,9 @@
 
         .buttons-container {
             position: absolute;
-            top: calc(50% + 70px);
-            left: 50%;
-            transform: translateX(-50%);
+            top: 50%;
+            transform: translateY(-50%);
+            width: 100%;
             text-align: center;
         }
 
