--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 </head>
 <body>
     <canvas></canvas>
+    <div class="container">
         <div class="text">npm install @latest</div>
+    </div>
     <div class="buttons-container">
         <button onclick="toggleReverse();">reVerse</button>
         <button onclick="refreshAnimation();">reFresh</button>
