--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <title>Canvas Animation</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { background: #000; }
+        body { 
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
         canvas { 
-            display: block; 
             position: absolute; 
             top: 0; 
             left: 0; 
             width: 100%; 
             height: 100%;
+            z-index: -1; /* Ensure the canvas is behind the content */
         }
-        .container { 
-            position: absolute; 
-            top: 40%; 
-            left: 50%; 
-            transform: translate(-50%, -50%); 
-            text-align: center; 
+        .container, .buttons-container, .bottom-text {
+            margin-bottom: 20px; /* Add space between elements */
+            text-align: center;
         }
         
         @font-face {
@@ -39,15 +43,6 @@
             font-weight: bold;
         }
 
-        .buttons-container {
-            position: absolute;
-            top: calc(50% + 20px); /* Adjusted for better centering */
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100%;
-            text-align: center;
-        }
-
         button {
             font-family: "Minecraftia", sans-serif;
             background-color: #1DA1F2;
@@ -61,15 +56,6 @@
 
         button:hover {
             background-color: #0d8dd6;
-        }
-
-        .bottom-text {
-            position: absolute;
-            top: calc(50% + 80px); /* Adjusted for proper spacing */
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            white-space: nowrap;
         }
     </style>
     <link rel="icon" type="image/png" href="favicon.ico">
