--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="buttons-container">
         <button onclick="toggleReverse();">reVerse</button>
         <button onclick="refreshAnimation();">reFresh</button>
-        <button onclick="scatterBoxes();">reDirection</button>
+        <button onclick="scatterBoxes();">reDirect</button>
     </div>
     <div class="bottom-text text font-bold">The Beginning Is Near!</div>
     
