--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reFresh • reVerse • reDirect</title>
-   <link rel="icon" href="https://ipfs.io/ipfs/QmUcPZ5rrk9hniWKmPVTZ83TYwPuzLtu5GEq8nhoNJM7N7" type="image/x-icon">
+  <link rel="icon" href="/public/favicon.svg" type="image/svg+xml">
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
