--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reFresh • reVerse • reDirect</title>
-  <link rel="icon" href="/public/favicon.svg" type="image/svg+xml">
+    <head>
+    <link rel="icon" href="/public/favicon.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/public/favicon.svg" type="image/svg+xml">
+    </head>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
