--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="buttons-container">
         <button onclick="toggleReverse();">reVerse</button>
         <button onclick="refreshAnimation();">reFresh</button>
-        <button onclick="scatterBoxes();">reDiret</button>
+        <button onclick="scatterBoxes();">reDirect</button>
     </div>
     <div class="bottom-text text font-bold">The Beginning Is Near!</div>
     
@@ -92,7 +92,7 @@
             resetDrops();
         }
 
-        var boxSize = 15;
+        var boxSize = 25;
         var columns;
         
         var colors = [
