--- a/index.html
+++ b/index.html
@@ -109,32 +109,27 @@
 
         var iterations = 0;
         var isReversed = false;
-        var isScattered = false;
         var intervalId;
 
         function draw() {
             ctx.fillStyle = 'rgba(0, 0, 0, .1)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
-            if (isScattered) {
-                scatterBoxes();
-            } else {
-                for (var i = 0; i < drops.length; i++) {
-                    var colorIndex = (drops[i] + i) % colors.length;
-                    ctx.fillStyle = colors[colorIndex];
-                    ctx.fillRect(i * boxSize, drops[i] * boxSize, boxSize, boxSize);
-                    ctx.strokeStyle = '#000';
-                    ctx.strokeRect(i * boxSize, drops[i] * boxSize, boxSize, boxSize);
+            for (var i = 0; i < drops.length; i++) {
+                var colorIndex = (drops[i] + i) % colors.length;
+                ctx.fillStyle = colors[colorIndex];
+                ctx.fillRect(i * boxSize, drops[i] * boxSize, boxSize, boxSize);
+                ctx.strokeStyle = '#000';
+                ctx.strokeRect(i * boxSize, drops[i] * boxSize, boxSize, boxSize);
 
-                    if (isReversed) {
-                        drops[i]++;
-                        if (drops[i] * boxSize > canvas.height && Math.random() > 0.95) {
-                            drops[i] = 0;
-                        }
-                    } else {
-                        drops[i]--;
-                        if (drops[i] * boxSize < 0 && Math.random() > 0.95) {
-                            drops[i] = Math.floor(canvas.height / boxSize);
-                        }
+                if (isReversed) {
+                    drops[i]++;
+                    if (drops[i] * boxSize > canvas.height && Math.random() > 0.95) {
+                        drops[i] = 0;
+                    }
+                } else {
+                    drops[i]--;
+                    if (drops[i] * boxSize < 0 && Math.random() > 0.95) {
+                        drops[i] = Math.floor(canvas.height / boxSize);
                     }
                 }
             }
@@ -159,23 +154,24 @@
         }
 
         function scatterBoxes() {
-            isScattered = true;
-            for (var i = 0; i < drops.length; i++) {
-                var dx = Math.floor(Math.random() * 3) - 1; // Random change in x direction (-1, 0, 1)
-                var dy = Math.floor(Math.random() * 3) - 1; // Random change in y direction (-1, 0, 1)
-                drops[i] += dy;
-                if (drops[i] * boxSize < 0 || drops[i] * boxSize >= canvas.height) {
-                    drops[i] -= dy; // Undo if box goes out of bounds vertically
+            clearInterval(intervalId);
+            iterations = 0;
+            resetDrops();
+            intervalId = setInterval(function() {
+                for (var i = 0; i < drops.length; i++) {
+                    var dx = Math.floor(Math.random() * 3) - 1; // Random change in x direction (-1, 0, 1)
+                    var dy = Math.floor(Math.random() * 3) - 1; // Random change in y direction (-1, 0, 1)
+                    drops[i] += dy;
+                    if (drops[i] * boxSize < 0 || drops[i] * boxSize >= canvas.height) {
+                        drops[i] -= dy; // Undo if box goes out of bounds vertically
+                    }
+                    if (i * boxSize < 0 || i * boxSize >= canvas.width) {
+                        drops[i] -= dx; // Undo if box goes out of bounds horizontally
+                    } else {
+                        drops[i] += dx;
+                    }
                 }
-                if (i * boxSize < 0 || i * boxSize >= canvas.width) {
-                    drops[i] -= dx; // Undo if box goes out of bounds horizontally
-                } else {
-                    drops[i] += dx;
-                }
-            }
-            setTimeout(function() {
-                isScattered = false;
-            }, 1000); // Reset after 1 second
+            }, 75);
         }
 
         window.addEventListener('resize', resizeCanvas);
