--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 ctx.fillStyle = 'rgba(0, 0, 0, .1)';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
                 for (var i = 0; i < positions.length; i++) {
-                    positions[i].x += velocities[i].vx * boxSize;
-                    positions[i].y += velocities[i].vy * boxSize;
+                    positions[i].x += velocities[i].vx * boxSize / 2;
+                    positions[i].y += velocities[i].vy * boxSize / 2;
 
                     // Ensure the boxes stay within the bounds of the canvas
                     if (positions[i].x < 0) positions[i].x = 0;
@@ -187,6 +187,10 @@
                     ctx.fillRect(positions[i].x, positions[i].y, boxSize, boxSize);
                     ctx.strokeStyle = '#000';
                     ctx.strokeRect(positions[i].x, positions[i].y, boxSize, boxSize);
+                }
+                iterations++;
+                if (iterations >= canvas.height / boxSize) {
+                    clearInterval(intervalId);
                 }
             }, 75);
         }
