--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button onclick="refreshAnimation();">reFresh</button>
         <button onclick="scatterBoxes();">reDirect</button>
     </div>
-    <div class="bottom-text text font-bold">The Beginning Is Near!</div>
+    <div class="bottom-text text font-bold">everyThing comes from noThing...</div>
     
     <script>
         var canvas = document.querySelector('canvas'),
