--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
     <canvas></canvas>
     <div class="container">
-        <div class="text">-npm install @latest -g</div>
+        <div class="text">per Ardua</div>
     </div>
     <div class="buttons-container">
         <button onclick="toggleReverse();">reVerse</button>
